# zkr

./: ACKNOWLEDGEMENTS.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  deny.toml
.github/workflows/: ci.yml
docs/: architecture.md  embeddings.md  research.md
plugins/hermes/: __init__.py  plugin.yaml  test_plugin.py
plugins/openclaw/: cli.ts  index.test.ts  index.ts  openclaw.plugin.json  package.json  tsconfig.json
src/: lib.rs  main.rs  model.rs  personality.rs  self_improve.rs  store.rs
src/store/: apply.rs  embeddings.rs  export.rs  lifecycle.rs  repair.rs  retrieval.rs  schema.rs  tests.rs
src/store/tests/: apply.rs  embeddings.rs  export.rs  lifecycle.rs  migrations.rs  retrieval.rs
tests/: cli.rs
tests/fixtures/: personality_product_plan.txt
