[package]
name = "zkr"
version = "0.1.4"
edition = "2024"
rust-version = "1.85"
description = "Evidence-backed temporal memory for personal agents"
repository = "https://github.com/tschk/zkr"
license = "ISC"
exclude = ["plugins/"]

[dependencies]
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "deny"
